--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'de.flapdoodle.embed', name: 'de.flapdoodle.embed.mongo', version: '2.0.0'
 
-    compile "com.github.austinv11:Discord4j:dev-SNAPSHOT"
+    compile "com.github.austinv11:Discord4j:72ecb53dec8d1e4ac51876ce429754dcc1a021d6"
     compile "ch.qos.logback:logback-classic:1.1.7"
     compile 'com.sedmelluq:lavaplayer:1.2.12'
     compile group: 'de.caluga', name: 'morphium', version: '3.1.0'
